# flat-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SHEETS_SETUP.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
flatbot/: __main__.py  config.py  llm.py  logging_setup.py  matchstore.py  notifier.py  pipeline.py  sheets.py  store.py
flatbot/adapters/: base.py  cloudflare.py  comparis.py  flatfox.py  homegate.py  immoscout.py  newhome.py
scripts/: ship-to-pi.sh
tests/: test_adapters.py  test_email_serialization.py  test_integration_live.py  test_matchstore.py  test_pipeline.py  test_store.py
tests/fixtures/: comparis_raw.json  flatfox_raw.json  homegate_raw.json  immoscout_raw.json  newhome_raw.json
