[project]
name = "flatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "gspread>=6.0",
    "curl-cffi>=0.15.0",
    "playwright>=1.60.0",
    "nodriver>=0.50.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flatbot"]

[tool.pytest.ini_options]
markers = [
    "integration: live network / browser tests; opt-in only (run with -m integration)",
]
